Fixed search modal overlaying menu on mobile (7.2.7 regression)

--- a/src/assets/stylesheets/main/layout/_search.scss
+++ b/src/assets/stylesheets/main/layout/_search.scss
@@ -150,6 +150,7 @@
       z-index: 2;
       width: 0;
       height: 0;
+      overflow: hidden;
       transform: translateX(5%);
       opacity: 0;
       transition:
